<resources>
    <string name="app_name">Samaritan</string>

    <string name="title_activity_game">Jeu</string>

    <!-- =========================================================================================================== -->
    <!--                                                   HOME                                                      -->
    <!-- =========================================================================================================== -->

    <string name="txt_Bonsoir">Bonjour\n</string>
    <string name="text_button_niveau_bonus">Niveau bonus</string>
    <string name="description_btn_jouer">JOUER</string>

    <!-- =========================================================================================================== -->
    <!--                                                ActionBar                                                    -->
    <!-- =========================================================================================================== -->

    <string-array name="items">
        <item>Leaderboard</item>
        <item>Paramètres</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="new_game">Nouveau jeu</string>
    <string name="help">Help</string>
    <string name="action_pause">pause</string>
    <string name="menu_jeu_title_musique">Musique du jeu</string>

    <!-- =========================================================================================================== -->
    <!--                                        Dialog Affichage du score                                            -->
    <!-- =========================================================================================================== -->

    <string name="dialog_fatality">Fatality</string>
    <string name="cancel">Quitter</string>
    <string name="fire">rejouer</string>

    <!-- =========================================================================================================== -->
    <!--                                          Navigation Drawer                                                  -->
    <!-- =========================================================================================================== -->

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_drawer_accueil">Accueil</string>
    <string name="title_drawer_leaderboard">Leaderboard</string>
    <string name="title_drawer_settings">Paramètres</string>
    <string name="title_drawer_a_propos">A Propos</string>

    <!-- =========================================================================================================== -->
    <!--                                          Advanced settings                                                  -->
    <!-- =========================================================================================================== -->

    <string name="pref_header_general">Général</string>

    <string name="pref_title_display_name">Nom du joueur</string>
    <string name="pref_default_display_name">Joueur</string>

    <string name="pref_title_vibreur">Vibreur</string>
    <string name="pref_description_vibreur">Si cette option est activée, le téléphone va vibrer pendant le jeu</string>

    <string name="pref_title_Sons">Sons</string>
    <string name="pref_description_son">Choisir le son qui sera joué pendant le jeu</string>

    <string name="pref_title_ringtone">Son</string>

    <string name="pref_categorie_son">Sons</string>
    <string name="pref_categorie_jeu">Jeu</string>

    <string name="title_seekbar_vitesse">Vitesse</string>
    <string name="commencer_partie">Commencer la partie</string>
    <string name="title_btn_jouer">Jouer</string>
    <string name="title_name">Bonsoir Gui</string>
    <string name="imageView_description">ImageDrawer</string>

    <string name="default_value_theme">Halloween</string>
    <string name="pref_theme">pref_theme</string>
    <string name="title_pref_theme">Thème</string>
    <string name="pref_theme_dialog_title">Choisir le thème de l\'application</string>
    <string name="title_menu_delete">Delete</string>
    <string name="pref_son">pref_son</string>
    <string name="pref_son_dialog_title">Choisir un son</string>

    <string-array name="items_themes">
        <item>Halloween</item>
        <item>Défaut</item>
    </string-array>

    <string-array name="themes_listentries">
        <item>Halloween</item>
        <item>Défaut</item>
    </string-array>
    <string-array name="themes_listvalues">
        <item>#EE7600</item>
        <item>#3f51b5</item>
    </string-array>

    <string-array name="sons_listentries">
        <item>Fantôme</item>
        <item>Yoshi</item>
        <item>D\'oh</item>
        <item>Nope</item>
        <item>Erreur windows</item>
    </string-array>
    <string-array name="sons_listvalues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="perso_listentries">
        <item>Futurama</item>
        <item>Pacman</item>
        <item>space invaders</item>
        <item>Mario</item>
    </string-array>
    <string-array name="perso_listvalues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <!-- =========================================================================================================== -->
    <!--                                          Textes pour le A propos                                            -->
    <!-- =========================================================================================================== -->

    <string name="num_version">Version 1.0.3\n2016</string>
    <string name="a_propos_devs">Application développée par Nicolas Orlandini et Valentin Leon</string>
    <string name="description_logo">logo de l\'application</string>
    <string name="nom_application">Samaritan</string>
    <string name="lien_github">github.com/NicolasOrlandini/AndroidProjet</string>
    <string name="title_res">Bibliothèque et Ressources</string>
    <string name="title_lien_github">Lien GitHub</string>

    <!-- =========================================================================================================== -->
    <!--                                          Texte pour le helper                                               -->
    <!-- =========================================================================================================== -->

    <string name="title_text_helper">Bienvenue sur le jeu Samaritan</string>
    <string name="text_helper">Pour jouer, il suffit de toucher le personnage apparaissant dans la fenêtre de jeu
        le plus de fois possible.\n\n
        Le but étant de faire le plus de points possible pendant le temps défini dans les préférences.\n\n
        Il est possible de personnaliser le jeu depuis les paramètres accessibles dans le menu tiroir.</string>

    <!-- =========================================================================================================== -->
    <!--                                          Texte pour le Leaderboard                                          -->
    <!-- =========================================================================================================== -->

    <string name="iftextnull">Aucun score"</string>
    <string name="text_score">Score : </string>
</resources>