<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_general">
        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_vibreur"
            android:title="@string/pref_title_vibreur" />
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_title_display_name"
            android:inputType="textCapWords"
            android:key="id_joueur"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name"
            android:text="bonjour"/>
        <ListPreference
            android:key="@string/pref_theme"
            android:title="@string/title_pref_theme"
            android:dialogTitle="@string/pref_theme_dialog_title"
            android:entries="@array/themes_listentries"
            android:entryValues="@array/themes_listvalues"
            android:defaultValue="#EE7600"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_categorie_son">
        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_sons"
            android:title="@string/pref_title_Sons" />
        <ListPreference
            android:defaultValue="1"
            android:dependency="switch_sons"
            android:key="@string/pref_son"
            android:dialogTitle="@string/pref_son_dialog_title"
            android:entries="@array/sons_listentries"
            android:entryValues="@array/sons_listvalues"
            android:title="@string/pref_title_ringtone" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_categorie_jeu">
        <SeekBarPreference
            android:title="@string/title_seekbar_vitesse"
            android:key="seekbar_vitesse"
            android:max="500"
            android:defaultValue="80">
        </SeekBarPreference>
        <EditTextPreference
            android:key="pref_temps_jeu"
            android:title="Temps de jeu"
            android:summary="Choisir la durée d'une partie"
            android:numeric="integer"
            android:maxLength="2"
            android:defaultValue="30">
        </EditTextPreference>
        <ListPreference
            android:key="pref_perso"
            android:defaultValue="1"
            android:dialogTitle="Choisir un personnage"
            android:entries="@array/perso_listentries"
            android:entryValues="@array/perso_listvalues"
            android:title="Personnage"
            android:summary="Choisir le personnage" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="A propos de l'application">
        <Preference
            android:key="pref_version"
            android:summary="Version 1.0.2">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>